force-app/main/default/objects/AnswerChoice__c/AnswerChoice__c.object-meta.xml
<CustomObject>
    <description>Store the type of answer like picklist tye, text type , radio type etc.</description>
    <label>Answer Choice</label>
    <nameField>
        <displayFormat>Answer Choice-{0000}</displayFormat>
        <label>AnswerChoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answer Choices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>