force-app/main/default/objects/AnswerChoice__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>Indicates each of the answer record values related to each assessment question</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>