force-app/main/default/objects/AnswerChoice__c/fields/AnswerOrder__c.field-meta.xml
<CustomField>
    <fullName>AnswerOrder__c</fullName>
    <description>Indicates the order in which each answer should be displayed for a question</description>
    <label>Answer Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>