force-app/main/default/objects/AnswerChoice__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>The assessment question to which the answer choice is related</description>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>Answer Choices</relationshipLabel>
    <relationshipName>Answer_Choices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>