force-app/main/default/objects/AnswerChoice__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Indicates the score associated with each of the answers for an assessment question</description>
    <label>Score</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>