force-app/main/default/objects/AnswerChoice__c/recordTypes/Answer_choice.recordType-meta.xml
<RecordType>
    <fullName>Answer_choice</fullName>
    <active>true</active>
    <label>Answer choice</label>
</RecordType>